--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,11 @@
 "editor.suggestOnTriggerCharacters": true,
 "editor.acceptSuggestionOnEnter": "on",
 "editor.suggestSelection": "first",
-"editor.parameterHints.enabled": true
+"editor.parameterHints.enabled": true,
+"editor.foldingImportsByDefault": true,
+"editor.folding": true,
+"editor.foldingStrategy": "auto",
+"editor.showFoldingControls": "always",
+"editor.codeFolding": true,
+"editor.foldLevel": 2
 }
